rLogViewer/public/style.css
/*
 * style.css v0.01
 * This file is part of the rLogViewer project.  
 * Copyright (c) AIAC GI17 P9 Team. All rights reserved.  
 * Licensed under the MIT License. See LICENSE file in the project root for full license information.  
*/

* {
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
}

html,
body {
  height: 100%;
}

body {
  display: flex;
  flex-direction: column;
  margin: 0;
  font-family: Roboto, sans-serif;
  white-space: nowrap;
  -webkit-font-smoothing: antialiased;
  background: rgba(255, 255, 255, 255);
}

.main {
  display: flex;
  flex-direction: column;
  flex: 1;
  margin: 3vh 2vw;
}

.main > div+div {
  margin-bottom: 10px;
}

.main > div {
  border-radius: 10px;
}

/*
  ████████  ██████  ██████        ██████   █████  ██████  
     ██    ██    ██ ██   ██       ██   ██ ██   ██ ██   ██ 
     ██    ██    ██ ██████  █████ ██████  ███████ ██████  
     ██    ██    ██ ██            ██   ██ ██   ██ ██   ██ 
     ██     ██████  ██            ██████  ██   ██ ██   ██
*/

.top-bar {
  display: flex;
  background-color: #166cbd;
  height: 7vh;
  user-select: none;
}

.top-bar .item {
  display: flex;
  align-items: center;
  padding: 0 1em;
  font-size: 1em;
  color: #fff;
}

.top-bar hr {
  background-color: #fff;
  border: none;
  width: 1px;
  margin: 0;
}

.top-bar .selectable {
  cursor: pointer;
  transition: background-color 150ms;
}

.top-bar .selectable:hover {
  background-color: #197bd6;
}

.top-bar .selectable:active {
  background-color: #1c89ef;
}

.top-bar .static {
  background-color: #115798;
  font-size: 1.1em;
  font-weight: bold;
  cursor: default;
}

.top-bar .item img {
  height: 50%;
  margin-right: 0.5em;
}

.top-bar .item:first-child img {
  height: 70%;
}

/*
███████ ███████  █████  ██████   ██████ ██   ██ 
██      ██      ██   ██ ██   ██ ██      ██   ██ 
███████ █████   ███████ ██████  ██      ███████ 
     ██ ██      ██   ██ ██   ██ ██      ██   ██ 
███████ ███████ ██   ██ ██   ██  ██████ ██   ██
*/

.search-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: fit-content;
  padding: 20px;
  background-color: #eeeeee;  
}

.search-container input {
  display: inline-block;
  font-family: inherit;
  font-size: inherit;
  flex: 1;
}

#query {
  border-radius: 4px;
  padding: 14px 20px;
  border: 1px solid #ccc;
}

.search-section {
  display: flex;
  margin-top: 10px;
}

/*
███████ ███████  █████  ██████   ██████ ██   ██       ██████  ██    ██ ████████ ████████  ██████  ███    ██ 
██      ██      ██   ██ ██   ██ ██      ██   ██       ██   ██ ██    ██    ██       ██    ██    ██ ████   ██ 
███████ █████   ███████ ██████  ██      ███████ █████ ██████  ██    ██    ██       ██    ██    ██ ██ ██  ██ 
     ██ ██      ██   ██ ██   ██ ██      ██   ██       ██   ██ ██    ██    ██       ██    ██    ██ ██  ██ ██ 
███████ ███████ ██   ██ ██   ██  ██████ ██   ██       ██████   ██████     ██       ██     ██████  ██   ████                                                                                                                                                                                                                     
*/

#search {
  background-color: #115798;
  background-image: url(./assets/ic_search.svg);
  background-repeat: no-repeat;
  background-size: 24px;
  background-position: center;
  color: #fff;
  align-self: center;  
  height: 80%;
  aspect-ratio: 1;  
  margin-left: 10px;
  border: none;
  border-radius: 10px;
  cursor: pointer;
  font-family: inherit;
  font-size: large;
  transition: background-color 150ms, box-shadow 150ms;
}

#search:hover {
  background-color: #1772c6;
}

#search:active {
  box-shadow: 0 0 5px 0 gray;
}

#search:disabled {
  color: silver;
  background-color: gray;
  cursor: not-allowed;
}

/*
██       ██████   ██████  ███████ 
██      ██    ██ ██       ██      
██      ██    ██ ██   ███ ███████ 
██      ██    ██ ██    ██      ██ 
███████  ██████   ██████  ███████ 
*/
.page-info {
  display: flex;
  align-items: center;
}

.page-info label {
  margin-right: 10px;
}

#select-page-size {
  font-size: large;
  font-family: inherit;
  border-color: lightgray;
}

#page-result-summary {
  flex: 1;
  text-align: center;
}

/*
██       ██████   ██████        ██████   █████   ██████  ███████ 
██      ██    ██ ██             ██   ██ ██   ██ ██       ██      
██      ██    ██ ██   ███ █████ ██████  ███████ ██   ███ █████   
██      ██    ██ ██    ██       ██      ██   ██ ██    ██ ██      
███████  ██████   ██████        ██      ██   ██  ██████  ███████ 
*/

table#log-page th {
  text-align: left;
  color: #333333;
  padding: 5px;
}

table#log-page tr:not(:first-child) th {
  color: #000;
}

#copy {
  background-color: #505050;
}

#copy:hover {
  background-color: #404040;
}

#copy:active {
  background-color: #353535;
}

/*
  ████████  █████   ██████  
     ██    ██   ██ ██       
     ██    ███████ ██   ███ 
     ██    ██   ██ ██    ██ 
     ██    ██   ██  ██████                                             
*/

.tag {
  position: relative;
  display: flex;
  align-items: center;
  width: fit-content;
  height: 24px;
  border-radius: 5px;
  padding: 2px 8px;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 11px;
  font-weight: bold;
  color: white;
  text-shadow: 0 1px 2px #333333;
  margin: 2px;
  user-select: none;
}

.tag img {
  height: 70%;
  margin-right: 5px;
  filter: drop-shadow(0px 1px 1px #303030);
}

/*
 ██████  ███████ ███    ██ ███████ ██████   █████  ██      
██       ██      ████   ██ ██      ██   ██ ██   ██ ██      
██   ███ █████   ██ ██  ██ █████   ██████  ███████ ██      
██    ██ ██      ██  ██ ██ ██      ██   ██ ██   ██ ██      
 ██████  ███████ ██   ████ ███████ ██   ██ ██   ██ ███████ 
*/

.rouded {
  border-radius: 100px;
}

.clickable {
  cursor: pointer;
}

.time {
  background-color: #707070;
}

.host {
  background-color: #2d2dc0;
}

.systag {
  background-color: #2f4f4f;
}

/*
██████  ██████  ██  ██████  ██████  ██ ████████ ██ ███████ ███████ 
██   ██ ██   ██ ██ ██    ██ ██   ██ ██    ██    ██ ██      ██      
██████  ██████  ██ ██    ██ ██████  ██    ██    ██ █████   ███████ 
██      ██   ██ ██ ██    ██ ██   ██ ██    ██    ██ ██           ██ 
██      ██   ██ ██  ██████  ██   ██ ██    ██    ██ ███████ ███████
*/

.emerg {
  background-color: #b71c1c;
}

.alert {
  background-color: #d32f2f;
}

.crit {
  background-color: #f44336;
}

.err {
  background-color: #ff5722;
}

.warning {
  background-color: #ff9100;
}

.notice {
  background-color: #4caf50;
}

.info {
  background-color: #1976d2;
}

.debug {
  background-color: #50c2d6;
}

/*
███████  █████   ██████ ██ ██      ██ ████████ ███████ ███████ 
██      ██   ██ ██      ██ ██      ██    ██    ██      ██      
█████   ███████ ██      ██ ██      ██    ██    █████   ███████ 
██      ██   ██ ██      ██ ██      ██    ██    ██           ██ 
██      ██   ██  ██████ ██ ███████ ██    ██    ███████ ███████ 
*/

.kern {
  background-color: #2f4f4f;
}

.user {
  background-color: #008040;
}

.mail {
  background-color: #cd853f;
}

.daemon {
  background-color: #4b0082;
}

.auth {
  background-color: #b03060;
}

.syslog {
  background-color: #d41f1f;
}

.lpr {
  background-color: #40e0d0;
}

.news {
  background-color: #40b640;
}

.cron {
  background-color: #2d2dc0;
}

.authpriv {
  background-color: #d415d4;
}

.ftp {
  background-color: #a78c12;
}

.local {
  background-color: #6495ed;
}

/*
████████  █████  ██████  ██      ███████ 
   ██    ██   ██ ██   ██ ██      ██      
   ██    ███████ ██████  ██      █████   
   ██    ██   ██ ██   ██ ██      ██      
   ██    ██   ██ ██████  ███████ ███████
*/
#table {
  display: none;
  border-collapse: collapse;
  width: 100%;
  margin-bottom: 10px;
}

#table td, #table th {
  border: 1px solid #aaa;
  padding: 8px;  
}

#table td:nth-child(5), #table th:nth-child(5) {	
  white-space: pre-line;
}

#table tr:nth-child(even){
  background-color: #f2f2f2;
}

#table tr:hover {
  background-color: #DDD;
  cursor: pointer;
}

#table tr:active {
  background-color: #CCC;
}

#table th {
  padding-top: 12px;
  padding-bottom: 12px;
  text-align: left;
  background-color: #1772c6;
  color: white;
}

#table .tag {
  margin: 0 auto;
}

#table-placeholder {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: xx-large;
  color: lightgray;
  width: 100%;
  height: 100%;  
}

